added clean architecture structure along with mvvm and hilt...

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,3 +8,6 @@ dependencyResolutionManagement {
 }
 rootProject.name = "AdvancedCleanArchitecture"
 include ':app'
+include ':data'
+include ':domain'
+include ':usecase-di'
