--- a/usecase-di/build.gradle
+++ b/usecase-di/build.gradle
@@ -1,12 +1,13 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
 }
 
-android {
+apply from: 'host_urls.gradle'
 
+android {
     compileSdkVersion android_target_sdk_version
     buildToolsVersion android_build_tool_version
 
@@ -19,9 +20,14 @@ android {
     }
 
     buildTypes {
+        debug {
+            buildConfigField "String", 'BASE_URL', "\"$devBaseUrl\""
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+
+            buildConfigField "String", 'BASE_URL', "\"$prodBaseUrl\""
         }
     }
     compileOptions {
@@ -31,31 +37,19 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8
     }
-    buildFeatures {
-        viewBinding true
-    }
 }
 
 dependencies {
 
-    //Clean Architecture dependencies
     implementation project(':domain')
-    implementation project(':usecase-di')
-
-    implementation "androidx.core:core-ktx:$core_ktx_version"
-    implementation "androidx.appcompat:appcompat:$appcompat_version"
-    implementation "com.google.android.material:material:$material_version"
-    implementation "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
-    implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
-
-    testImplementation "junit:junit:$junit_version"
-    androidTestImplementation "androidx.test.ext:junit:$test_ext_version"
-    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_core_version"
+    implementation project(':data')
 
     //Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutine_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutine_version"
+
+    //Moshi
+    implementation "com.squareup.retrofit2:converter-moshi:$moshi_version"
 
     //Hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
