--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,44 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+
+    //Default config
+    ext.android_min_sdk_version = 23
+    ext.android_target_sdk_version = 31
+    ext.android_build_tool_version = "29.0.3"
+
+    //Kotlin
+    ext.kotlin_version = '1.5.21'
+    ext.kotlin_coroutine_version = '1.5.2'
+    ext.core_ktx_version = '1.7.0'
+
+    //UI
+    ext.appcompat_version = '1.4.0'
+    ext.material_version = '1.4.0'
+    ext.constraintlayout_version = '2.1.2'
+    ext.navigation_version = '2.3.5'
+
+    //Test
+    ext.junit_version = "4.12"
+    ext.test_ext_version = '1.1.3'
+    ext.espresso_core_version = '3.4.0'
+
+    //Hilt
+    ext.hilt_version = '2.37'
+    ext.hilt_work_version = '1.0.0'
+    ext.hilt_compiler_version = '1.0.0'
+
+    //Moshi
+    ext.moshi_version = '2.4.0'
+
     repositories {
         google()
         mavenCentral()
     }
+
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.2"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
-
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
