updated hilt version and handled correct scoping based on qualifier

--- a/usecase-di/build.gradle
+++ b/usecase-di/build.gradle
@@ -53,7 +53,5 @@ dependencies {
 
     //Hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
-    kapt "com.google.dagger:hilt-compiler:$hilt_version"
-    implementation("androidx.hilt:hilt-work:$hilt_work_version")
-    kapt("androidx.hilt:hilt-compiler:$hilt_compiler_version")
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 }
