--- a/build.gradle
+++ b/build.gradle
@@ -3,19 +3,19 @@ buildscript {
 
     //Default config
     ext.android_min_sdk_version = 23
-    ext.android_target_sdk_version = 31
-    ext.android_build_tool_version = "30.0.2"
+    ext.android_target_sdk_version = 32
+    ext.android_build_tool_version = "33.0.0"
 
     //Kotlin
-    ext.kotlin_version = '1.5.21'
+    ext.kotlin_version = '1.6.21'
     ext.kotlin_coroutine_version = '1.5.2'
     ext.core_ktx_version = '1.7.0'
 
     //UI
-    ext.appcompat_version = '1.4.0'
-    ext.material_version = '1.4.0'
-    ext.constraintlayout_version = '2.1.2'
-    ext.navigation_version = '2.3.5'
+    ext.appcompat_version = '1.5.1'
+    ext.material_version = '1.6.1'
+    ext.constraintlayout_version = '2.1.4'
+    ext.navigation_version = '2.5.2'
 
     //Test
     ext.junit_version = "4.12"
@@ -23,7 +23,7 @@ buildscript {
     ext.espresso_core_version = '3.4.0'
 
     //Hilt
-    ext.hilt_version = '2.40.5'
+    ext.hilt_version = '2.43.2'
     ext.hilt_work_version = '1.0.0'
     ext.hilt_compiler_version = '1.0.0'
 
@@ -34,14 +34,14 @@ buildscript {
         google()
         mavenCentral()
     }
+}
 
-    dependencies {
-        classpath "com.android.tools.build:gradle:7.0.2"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
+plugins {
+    id 'com.android.application' version '7.1.3' apply false
+    id 'com.android.library' version '7.1.3' apply false
+    id 'org.jetbrains.kotlin.android' version "$kotlin_version" apply false
+    id 'com.google.dagger.hilt.android' version "$hilt_version" apply false
+    id 'org.jetbrains.kotlin.jvm' version '1.6.21' apply false
 }
 
 task clean(type: Delete) {
