--- a/usecase-di/build.gradle
+++ b/usecase-di/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'com.android.library'
-    id 'kotlin-android'
+    id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
-    id 'dagger.hilt.android.plugin'
+    id 'com.google.dagger.hilt.android'
 }
 
 apply from: 'host_urls.gradle'
